clarify [caller] mechanics

--- a/src/collections/proof-of-existence/1.md
+++ b/src/collections/proof-of-existence/1.md
@@ -42,19 +42,19 @@ The young man clicked his tongue. “Couldn’t have done this the easy way, huh
 
 Great, now he was armed and I wasn’t. I kicked off the ground and rushed at him. My speed seemed to take him by surprise. He swung the knife in a shaky form. I blocked the movement and snaked my arm over his, catching it under my grip and breaking it over my knee. Phew. It sure was nice that this maneuver was so easy to pull off in a dream, huh? 
 
-But despite letting out a cry of pain, he didn’t let go of the knife, even when I grappled to get it out of his control. He gritted his teeth and grabbed me tight with his free hand. 
+But despite letting out a cry of pain, he didn’t let go of the knife, even when I grappled to get it out of his control. He gritted his teeth and grabbed me tight with his free hand, twisting the knife just far enough to cut my skin. A bead of blood welled up on the blade. 
 
 “I declare this title to be true,” he gasped. “`[Executor of the Sacrifice’s Last Will]`.” 
 
-What? 
-
-He finally twisted the knife far enough to cut my skin, but at the cost of his stable grip. I seized the opportunity to wrench the knife away from him and stab him in the torso. Then I stabbed him a few more times just to be sure. 
-
 A golden chain materialized around me, wrapping itself around my chest before sinking beneath my skin. 
 
-Huh? What kind of setting was this? 
+Huh? What kind of bullshit was this? 
 
-I quickly pushed the young man away and backed up a few steps. He groaned as he sat up. There was a golden dust seeping out of his stab wounds in place of blood, like scattering sand. He stretched his uninjured arm out. “`[Caller]`, come back to me!” 
+His grip on the knife had become unstable due to his nonsense, though, so I seized the opportunity to wrench the knife away from him and stab him in the torso. Then I stabbed him a few more times just to be sure. 
+
+That was enough to kill him, right? I kicked him in the stomach and sent him tumbling away. 
+
+But against my expectations, he sat up with a groan. There was a golden dust seeping out of his stab wounds in place of blood, like scattering sand. He stretched his uninjured arm out. “`[Caller]`, come back to me!” 
 
 Nothing happened. I glanced around just to be sure. The young man’s expression twisted. 
 
@@ -64,11 +64,11 @@ I attacked him instead of answering. We had a short scuffle where he shouted a l
 
 There was a cage that didn’t hold me, and thorns that didn’t bind me. There was a lantern that did not shine on me, and shadows that did not touch me. I didn’t understand anything except that he meant me harm, and he was panicking. 
 
-So of course, I beat him up. 
+So of course, I beat him up again. 
 
-As he lost his composure, the things he said became even more incomprehensible to me. It was a tragic instance where sharing the same language couldn’t penetrate the barrier of mutual understanding at all. 
+My attacks were bafflingly non-lethal, but they still seemed to stagger him, and as he lost his composure, the things he said became even more incomprehensible to me. It was a tragic instance where sharing the same language couldn’t penetrate the barrier of mutual understanding at all. 
 
-It was very clear that he hadn’t intended anything good for me, though, so after working him over, I tossed him into the mystic circle I’d been standing on before and went to stand on his. 
+It was very clear that he hadn’t intended anything good for me, though, so after a few more attempts to put him down for good, I tossed him into the mystic circle I’d been standing on before and went to stand on his. 
 
 He tried to get to his feet, but it was too late. The circles beneath us lit up, encircling us with golden barriers. He slammed his palms against the barrier a few times before sliding down to his knees. His expression was quite bad. In my opinion, his situation could only be described as, “Serves him right.” 
 
@@ -228,10 +228,12 @@ Nothing about what the title itself did… Was it just for decoration? I turned 
 > 
 > **Description:** Acacius Duval’s former World Proof. The power of a calculating mind that constantly evaluates others and describes others truly, even if it seems untrue. That which is hidden, or that which has not yet become true, shall surely be brought into the light. 
 > 
-> **Title Skill:** The title bearer can allow whoever it cuts to borrow a title from the future. The more powerful the title, the farther the future, and the longer the duration, the more vitality the title bearer must sacrifice in return. 
-> - If the target does not acquire the borrowed title through natural means by the time that specified future point has come to pass, they will die. 
+> **Title Skill:** The title bearer can forcibly bestow whoever the knife cuts with a title borrowed from the future. The more powerful the title, the farther the future, and the longer the duration, the more vitality the title bearer must sacrifice in return. 
+> - If the target does not fulfill the requirements of the borrowed title through natural means by the time the future becomes the present, they will die. 
 
 Wait a minute. A black knife? 
+
+What the hell had Acacius done to me?
 
 With a bad feeling, I looked at the next page. 
 
