--- a/src/collections/proof-of-existence/1.md
+++ b/src/collections/proof-of-existence/1.md
@@ -42,7 +42,7 @@ The young man clicked his tongue. “Couldn’t have done this the easy way, huh
 
 Great, now he was armed and I wasn’t. I kicked off the ground and rushed at him. My speed seemed to take him by surprise. He swung the knife in a shaky form. I blocked the movement and snaked my arm over his, catching it under my grip and breaking it over my knee. Phew. It sure was nice that this maneuver was so easy to pull off in a dream, huh? 
 
-But despite letting out a cry of pain, he didn’t let go of the knife, even when I grappled to get it out of his control. He gritted his teeth and grabbed me tight with his free hand, twisting the knife just far enough to cut my skin. A bead of blood welled up on the blade. 
+But despite letting out a cry of pain, he didn’t let go of the knife, even when I grappled to get it out of his control. He gritted his teeth and grabbed me tight with his free hand, twisting the knife just far enough to cut my skin. A bead of blood welled up on the dark blade. 
 
 “I declare this title to be true,” he gasped. “`[Executor of the Sacrifice’s Last Will]`.” 
 
