--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -290,11 +290,13 @@ Standing above him was an older man with rosy hair and a neatly trimmed beard. H
 
 His eyes crinkled. “Even against your cherished classmate?” 
 
-I looked at the young man on the floor. Despite his wounds, he still glared back at me fiercely. Under all the blood, beneath his long eyelashes, his slitted red eyes practically glowed with demonic fury. How scary. He scrabbled to pull the sword out of himself somehow, only for Acacius’ father to place a foot on his neck and force him back down. 
+I looked at the young man on the floor. Despite the wounds, he managed to meet my eyes with a hostile expression and a cold gaze. Under all the blood, beneath his long eyelashes, his slitted red eyes glowed like a demon’s. How scary. He scrabbled to pull the sword out of himself somehow, only for Acacius’ father to place a foot on his neck and force him back down. 
 
 “Did we have that kind of relationship?” I said. 
 
-“Acacius Duval,” the young man spit. “I swear, when I escape, I will kill you.” 
+“Acacius Duval,” the young man said, so calm it sent shivers down my spine. “When I escape, I will kill you.” 
+
+The way it came out as a statement made it feel more binding than any promise.
 
 Although I couldn’t say for certain that Acacius was in the wrong, I had to wonder what the hell the Duval family had been up to. 
 
