--- a/src/collections/proof-of-existence/3.md
+++ b/src/collections/proof-of-existence/3.md
@@ -14,13 +14,15 @@ I waved for the servants to go and waited for the door to close before speaking 
 
 “You don’t look so good.” 
 
-He peeled open his eyes enough to glare at me. “It’ll take more than that… to get rid of me.” 
+He peeled open his eyes to fix his piercing red gaze on me. 
 
-“Uh-huh,” I said, watching the blood bubbling around his lips. “Should I prepare to transcribe your last words?”
+“Do you think…” He coughed hard; the familiar sound of death's rattle exhaled from his lips. "…your problems will be over when I’m dead?”  
+
+“I might have some new ones,” I said, watching the blood bubbling around his lips. “Should I prepare to transcribe your last words?”
 
 The guest started to laugh, which quickly devolved into a series of wet coughs. 
 
-“What… Growing a conscience… now?” 
+“Are you… growing a conscience… now?” 
 
 “I’ve heard that miracles do happen,” I said. He didn’t laugh. Tough crowd. “Unfortunately, even if I called for a doctor now, it seems that they wouldn’t be able to do much for you.” 
 
