--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -4,7 +4,7 @@ arc: 1
 chapter: 2
 characters: ["cynara", "graves", "zaire", "cyprian", "luka"]
 warnings: []
-lastEdit: 2025-03-25
+lastEdit: 2025-03-27
 ---
 After reading through the entire Record of Existence, I took a moment to gather my thoughts. 
 
@@ -222,11 +222,16 @@ At the beginning of one of Acacius’ personal journals was a note, also in that
 > 
 > *That is all.*
 
-He dated the letter, but didn’t sign his name. What date was it, actually? I’d have to find a discreet way to ask.
+He dated the letter, but didn’t sign his name. I checked the calendar in his room. If he’d kept it up-to-date, then we were in August, and it had been three years since the letter was written. 
 
-Anyways, if I carried out this will within three years, I could probably free myself from the death sentence Acacius had gifted me. Looking after someone’s sister and using their name wasn’t hard. The only thing I was stuck on was this Luka guy. 
 
-To be honest, aside from the lifespan issue, there was no good reason to kill him. Why should I accept Acacius’ claims at face value? Despite his calculations, he hadn’t been able to predict his own death. If I killed Luka, it would have to be because I felt the reasoning was sufficient, and right now, I knew nothing. 
+That meant, according to this will and to the title he’d forced on me, I had two years to take care of Cynara, use Acacius’ name, and kill this Luka guy, or I would die. 
+
+
+The first two were simple enough, but I was stuck on the last condition.
+
+
+To be honest, aside from the lifespan issue, there was no good reason to kill Luka. Why should I accept Acacius’ claims at face value? Despite his calculations, he hadn’t been able to predict his own death. If I killed Luka, it would have to be because I felt the reasoning was sufficient, and right now, I knew nothing. 
 
 I couldn’t dismiss his wishes altogether, though. There was a logic behind Acacius’ actions. I just needed to figure out what it was. 
 
@@ -290,13 +295,13 @@ Standing above him was an older man with rosy hair and a neatly trimmed beard. H
 
 His eyes crinkled. “Even against your cherished classmate?” 
 
-I looked at the young man on the floor. Despite the wounds, he managed to meet my eyes with a hostile expression and a cold gaze. Under all the blood, beneath his long eyelashes, his slitted red eyes glowed like a demon’s. How scary. He scrabbled to pull the sword out of himself somehow, only for Acacius’ father to place a foot on his neck and force him back down. 
+I looked at the young man on the floor. Under all the blood, beneath his long eyelashes, his slitted red eyes glowed like a demon’s. He met my eyes with a hostile expression and a cold gaze that, despite our positions, somehow still made me feel like a prey animal under a hunter’s eyes. He reached with blood-slicked hands to pull the sword out of himself somehow, only for Acacius’ father to place a foot on his neck and force him back down. 
 
 “Did we have that kind of relationship?” I said. 
 
 “Acacius Duval,” the young man said, so calm it sent shivers down my spine. “When I escape, I will kill you.” 
 
-The way it came out as a statement made it feel more binding than any promise.
+The way it came out as a statement felt more binding than any promise.
 
 Although I couldn’t say for certain that Acacius was in the wrong, I had to wonder what the hell the Duval family had been up to. 
 
