adjust luka vibes

--- a/src/collections/proof-of-existence/3.md
+++ b/src/collections/proof-of-existence/3.md
@@ -4,9 +4,9 @@ arc: 1
 chapter: 3
 characters: ["cynara", "luka"]
 warnings: []
-lastEdit: 2025-03-21
+lastEdit: 2025-03-27
 ---
-It took less than ten minutes for the servants to bring the guest to my room. He’d been tightly bound with sturdy ropes and roughly wiped clean, revealing a face that I could only describe as “stupidly handsome.” They’d left on his long golden earrings, forming a striking contrast with his sharp eyes and soft jaw. A blue dragon pendant had been hung around his neck for reasons I could only begin to guess. 
+It took less than ten minutes for the servants to bring the guest to my room. He’d been tightly bound with sturdy ropes and roughly wiped clean, revealing a face that I could only describe as “stupidly handsome.” They’d left on his long golden earrings, forming a striking contrast with his sharp eyes and soft jaw. A blue dragon pendant had been hung around his neck for reasons I could only begin to guess.  
 
 The slowly spreading bloodstains on his clothes suggested that he hadn’t been treated as miraculously as I’d hoped. His breathing was ragged and his skin pallid. If I wanted to get information from him, I probably didn’t have much time. His head lolled as the servants brusquely stuffed him into the chair across the tea table from me. 
 
@@ -14,27 +14,38 @@ I waved for the servants to go and waited for the door to close before speaking 
 
 “You don’t look so good.” 
 
-He peeled open his eyes to fix his piercing red gaze on me. 
 
-“Do you think…” He coughed hard; the familiar sound of death's rattle exhaled from his lips. "…your problems will be over when I’m dead?”  
+It took some effort for him to focus his piercing red gaze on me. 
 
-“I might have some new ones,” I said, watching the blood bubbling around his lips. “Should I prepare to transcribe your last words?”
+“Do you think…” He coughed hard; the familiar sound of death's rattle exhaled from his lungs. “…your problems will be fixed… if you kill me?”  
+
+“Will they not?” I said. 
+
+The corner of his mouth tilted up in a mocking lilt.
+
+“Acacius, I will kill you,” he repeated. “That is my promise to you.” 
+
+Wow, scary. “Uh-huh,” I said, watching the blood bubbling around his lips. What a liar. But I could be tolerant of a dying man. “Should I prepare to transcribe your last words?”
 
 The guest started to laugh, which quickly devolved into a series of wet coughs. 
 
-“Are you… growing a conscience… now?” 
+“What… Feeling generous?” 
 
 “I’ve heard that miracles do happen,” I said. He didn’t laugh. Tough crowd. “Unfortunately, even if I called for a doctor now, it seems that they wouldn’t be able to do much for you.” 
 
-“So I should spend… my precious last moments… talking to you?” 
+He tilted his head, assessing me like a tiger sizing up its prey.
 
-I shrugged. “Do you really not have anything to ask?” It would be a bit disappointing if that was the case. A question could reveal a lot of information about relationships or the surrounding context. 
+“What do you want?” 
 
-The guest watched me for a moment, eyes flickering. 
+I shrugged. “Do you really not have anything to ask?” 
 
-I half expected that my ploy wouldn’t work. Although plenty of people would play along with an invitation to talk, suspicious or otherwise, the hostility I’d felt from him towards Acacius seemed strong enough to spurn any attempt at conversation entirely. 
+It would be a bit disappointing if that was the case. A question could reveal a lot of information about relationships or the surrounding context. 
 
-But strangely enough, it wasn’t.
+The guest watched me for a moment longer, eyes flickering. 
+
+I half expected that my ploy wouldn’t work. Although plenty of people would play along with an invitation to talk, suspicious or otherwise, he clearly harbored a strong hostility towards Acacius, and he spoke with a strong conviction, like it was only a matter of time before I was a dead man. By his hands, even. Why would he bother communicating with someone like that?
+
+But strangely enough, he did.
 
 “Where is Dreyminn?” he asked. 
 
@@ -47,6 +58,8 @@ Lucky for me, he played along, saying, “The crow spirit you kidnapped.”
 That just raised more questions than answers for me, though. 
 
 “Can a spirit really be kidnapped?” I drawled, careful to pitch it as a rhetorical comment rather than a genuine question. 
+
+The feeling that he considered me dead already grew stronger. 
 
 “If you can recognize their will… you recognize… that you can also go against it.”
 
@@ -64,13 +77,13 @@ I changed tactics. “You must have some ability if you got this far. Why don’
 
 The unspoken implication was that he had enough information to put together the pieces himself. If he did, it was good for me; and even if he didn’t, I’d know more about the situation. 
 
-The guest gazed at me for a while longer, as if he was putting me under evaluation. For someone who was dying, he was really calm, wasn’t he? 
+The guest pondered my words, less like someone solving a puzzle and more like someone putting me under evaluation. Despite his increasingly labored breathing, he didn’t seem to be in a rush. For a dying man, he was really calm, wasn’t he? 
 
 But he still played along. 
 
 “Capturing Dreyminn… drew my attention… to the New Lunar Society. Finding their frame… and infiltrating that realm… led me to your family’s… crimes. But my teacher… didn’t respond to my emergency signal.” 
 
-Fascinating connections were being made here. At this point, it was safe to say the Duval family was in the wrong, right? I was also surprised to hear him mention frames. From what I’d understood from Acacius’ books, frames were something that allowed different, and sometimes contradictory, systems of magic and technology to exist in parallel. This way, different systems could be used in the same place and time. But it was hard to move from dry theoretical passages to a practical example all of a sudden. Weren’t frames something that anyone had access to? What did it mean for the New Lunar Society have their own frame? 
+Fascinating connections were being made here. At this point, it was safe to say the Duval family was in the wrong, right? I was also surprised to hear him mention frames. From what I’d read in Acacius’ books, frames were something that allowed different, and sometimes contradictory, systems of magic and technology to exist in parallel. This way, different systems could be used in the same place and time. But it was hard to move from dry theoretical passages to a practical example all of a sudden. Weren’t frames something that anyone had access to? Why would the New Lunar Society have their own frame? 
 
 “And you sent the signal from within the realm?” I asked, raising an eyebrow. 
 
@@ -84,15 +97,17 @@ A wry smile. “Very… powerful.”
 
 He seemed to be telling the truth. “So, what can the Duval family do to that sort of personage?” 
 
-My guest made an expression of enlightenment and nodded as if he understood what I was implying. I felt a little sorry for encouraging all kinds of misconceptions, but at least it would make him feel better before he died, right? 
+My guest nodded as if he understood what I was implying. I felt a little sorry for encouraging all kinds of misconceptions, but at least it would make him feel better before he died, right? 
 
 I weighed the potential risks for a while before finally saying, “If you want your teacher to retrieve your body, you can try sending the signal again now.” 
 
 My guest met my eyes straight on. “You aren’t… afraid of the consequences?” 
 
-I let myself smirk a bit. “As long as I put my mind to it, I’m sure I can survive.” 
+“As long as I put my mind to it, I’m sure I can survive.” 
 
-It would be a shame if I had to give up this comfortable lifestyle, but it wouldn’t be a problem, either. I’d just have to make sure to steal some supplies and Acacius’ notes on the Devouring Exchange before I went. Speaking with my current identity, though, I was sure the implications of my words were quite different. He frowned and started to speak, but then he began coughing, so hard the blood dribbled all down the front of his already-stained clothes. 
+It would be a shame if I had to give up this comfortable lifestyle, but it wasn’t impossible, either. I’d just have to steal some supplies and Acacius’ notes on the Devouring Exchange before I left, and then find a way to circumvent Acacius’ death sentence. I’d already been thinking about doing that anyways.
+
+Speaking with my current identity, though, I was sure the implications of my words were quite different. My guest frowned and started to speak, but then he began coughing, so hard the blood dribbled all down the front of his already-stained clothes. 
 
 Although it seemed like it might be out of character, I got up and steadied him by the shoulder. 
 
@@ -100,7 +115,7 @@ When the coughing fit finally subsided, his breathing was far more strained. He 
 
 “I wasn’t joking about taking your last will,” I said. “I won’t make any promises, but I can hear you out.” 
 
-The guest managed to raise his head to meet my eyes. He looked very calm… Not afraid at all. 
+The guest managed to raise his head to meet my eyes. 
 
 “What’s… your… motive?” 
 
@@ -108,7 +123,9 @@ The guest managed to raise his head to meet my eyes. He looked very calm… Not 
 
 This guy probably qualified as someone who was sacrificed unjustly, right? 
 
-My guest shook his head at my answer. But he still said, “Don’t… let anyone else… see my body.” 
+My guest shook his head at my answer. 
+
+But he still said, “Don’t… let anyone else… see my body.” 
 
 That seemed easy enough to do. “I’ll try.” 
 
@@ -180,7 +197,7 @@ She looked at me like I was crazy, but bowed and brought me my meal. Having beco
 
 As usual, I ate all the fresh food, but I stowed away the flatbread and hard cheese in the closet. I just couldn’t feel at ease without some kind of emergency stash. 
 
-For the past couple days, this had been enough to calm my worries about abruptly waking up in a new world as a different person. But for whatever reason, my unease didn’t go away tonight. 
+For the past few days, this had been enough to calm my worries about abruptly waking up in a new world as a different person. But for whatever reason, my unease didn’t go away tonight. 
 
 Something was about to happen. I was sure of it. 
 
@@ -261,7 +278,7 @@ But Cynara didn’t leave. The previous hostility and ridicule had faded from he
 
 Huh? “Just, it feels as though some disaster is approaching… You have your sword, right?” 
 
-I could use my World Proof to manifest `[Caller]`, but maybe I should find a more sturdy weapon, too. 
+I could use my World Proof to manifest [Caller], but maybe I should find a more sturdy weapon, too. 
 
 Cynara tensed, but eventually unveiled the rapier she’d had hidden behind her back. 
 
@@ -277,7 +294,7 @@ From the moon, a clear line of darkness fell down through the stars and bloomed 
 
 All the hair on my arms stood on end. I immediately turned and ran. 
 
-Forget Acacius’ notes and the Devouring Exchange. Preserving my own life first was most important. 
+Forget Acacius’ will and the Devouring Exchange. Preserving my life first was most important. 
 
 “Wake up! Run!” I shouted, hitting the windows in the servants’ quarters as I passed by. “Get up and run!” 
 
