--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -295,7 +295,7 @@ Standing above him was an older man with rosy hair and a neatly trimmed beard. H
 
 His eyes crinkled. “Even against your cherished classmate?” 
 
-I looked at the young man on the floor. Under all the blood, beneath his long eyelashes, his slitted red eyes glowed like a demon’s. He met my eyes with a hostile expression and a cold gaze that, despite our positions, somehow still made me feel like a prey animal under a hunter’s eyes. He reached with blood-slicked hands to pull the sword out of himself somehow, only for Acacius’ father to place a foot on his neck and force him back down. 
+I looked at the young man on the floor. Under all the blood, beneath his long eyelashes, his slitted red eyes glowed like a demon’s. He met my eyes with a hostile expression and a cold gaze that, despite our positions, made me feel like a prey animal under a hunter’s eyes. He reached with blood-slicked hands to pull the sword out of himself somehow, only for Acacius’ father to place a foot on his neck and force him back down. 
 
 “Did we have that kind of relationship?” I said. 
 
@@ -335,7 +335,7 @@ Just before the Duke entered the rift, he turned back back and looked me in the 
 
 Then he, too, stepped into the void and disappeared. 
 
-I went down the stairs and picked up the young man’s sword, because it seemed like a shame to just leave a perfectly good weapon like that. 
+I went down the stairs and picked up the young man’s sword, because it seemed like a shame to just leave a perfectly good weapon like that, and I looked at the incision in the marble where Cyprian’s sword had cut through the marble like butter. 
 
 Cynara emerged from the upstairs hallways in a white night dress, silent and ethereal as a ghost. “Back to your rotten hobbies, brother?”
 
