minor edits and adjust luka vibes

--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -4,7 +4,7 @@ arc: 1
 chapter: 2
 characters: ["cynara", "graves", "zaire", "cyprian", "luka"]
 warnings: []
-lastEdit: 2025-03-27
+lastEdit: 2025-03-28
 ---
 After reading through the entire Record of Existence, I took a moment to gather my thoughts. 
 
@@ -116,7 +116,7 @@ I picked up a few more things from Graves as he talked, mostly about things for 
 
 First, the ritual was a customary coming-of-age ceremony for the main line of the Duval family. In the past, a lot of people went mad or were possessed by demons that wreaked havoc before they could be contained and killed. This apparently was a consequence of insufficient strength of the soul to confront the “trials” of the ritual. Still, greater rewards came with greater trials, and most people didn’t emerge from the ritual entirely unscathed — hence the common disturbance and loss of identity and memory. I really had to question why this family was so determined to keep this custom around if that was the case. 
 
-Second, the expectations on Acacius were high. The greater the ability he received, the more powerful his soul must have been, and the more authority and respect he would gain. Graves tactfully skirted around the question of what Acacius had obtained, but I could read between the lines. If I wanted to secure my status in the family, I would have to prove what power I had obtained. 
+Second, the expectations on Acacius were high. The greater the ability he received, the more powerful his soul must have been, and the more authority and respect he would gain. Graves tactfully skirted around the question of what Acacius had obtained, but I could read between the lines. If I wanted to secure my status in the family, I would have to prove what power I had gained. 
 
 My World Proof would probably prove plenty, but it’d throw a lot of questions on my own identity, plus I didn’t really want to publicize the fact that I could impersonate anyone I came across. That seemed like a really good way to get a lot of blame thrown my way. What else should I show, then? I didn’t think my knife skills were up to par. 
 
@@ -182,9 +182,9 @@ The bathroom had a large drop-in tub the size of a small pond, and it even had t
 
 It was the most blissful shower I’d had the luxury of taking in a long time. 
 
-Dangerous soul-devouring rituals, weird shadow dimensions, a hostile family with strange undercurrents… Who cared about that! Wasn’t Acacius’ life actually really great? 
+Dangerous soul-devouring rituals, weird shadow dimensions, a hostile family with strange undercurrents… Who cared about that! Wasn’t Acacius’ life actually great? 
 
-Okay, I decided. My last-ditch plan would no longer be faking my death and running away. Instead, I would steal the riches and light a fire to hide evidence before faking my death and running away. 
+Okay. My last-ditch plan would no longer be faking my death and running away. Instead, I would steal the riches and light a fire to hide evidence before faking my death and running away. 
 
 I just needed to be mindful of a few details while I was here. 
 
@@ -194,7 +194,7 @@ Which meant that I had a huge problem: the black knife on the inside of my left 
 
 It looked like I wouldn’t be wearing anything short-sleeved in the near future. Fortunately, from what I’d seen, Acacius’ wardrobe consisted almost exclusively of long-sleeved shirts. 
 
-The second big problem was my complete ignorance of my surroundings. I could get a lot of answers simply by implying that I’d lost my memories in the ritual, but given the lack of a loving family atmosphere so far, handing them the opportunity to manipulate my understanding of the world around me felt like a bad idea. No way I was trusting them with that. I would be better off faking my composure until I figured things out.
+The second big problem was my complete ignorance of my surroundings. I could get a lot of answers simply by implying that I’d lost my memories in the ritual, but given the lack of a loving family atmosphere so far, it felt like a bad idea to hand them the opportunity to manipulate my understanding of the world around me. No way I was trusting them with that. I would be better off faking my composure until I figured things out.
 
 I changed into Acacius’ silk pajamas and spent some time luxuriating in his giant bed with its stupidly high thread count sheets before focusing again. I needed to search for personal affects and other items that could tell me about Acacius’ past, his personality, and how I should act like him. 
 
@@ -231,7 +231,7 @@ That meant, according to this will and to the title he’d forced on me, I had t
 The first two were simple enough, but I was stuck on the last condition.
 
 
-To be honest, aside from the lifespan issue, there was no good reason to kill Luka. Why should I accept Acacius’ claims at face value? Despite his calculations, he hadn’t been able to predict his own death. If I killed Luka, it would have to be because I felt the reasoning was sufficient, and right now, I knew nothing. 
+To be honest, aside from the lifespan issue, there was no good reason to kill someone I didn't know. Why should I accept Acacius’ claims at face value? Despite his calculations, he hadn’t been able to predict his own death. If I killed Luka, it would have to be because I felt the reasoning was sufficient, and right now, I knew nothing. 
 
 I couldn’t dismiss his wishes altogether, though. There was a logic behind Acacius’ actions. I just needed to figure out what it was. 
 
@@ -241,7 +241,7 @@ So it didn't seem like too difficult a role to play.
 
 Next, I reviewed the books I’d selected. 
 
-I learned about the geography of this world, Kosmonymia, which helped me understand I was in a country known as the Principality of Iyiria, located at the eastern end of the continent. I absorbed more about the general common sense of technology and magic in the world; there was electricity and industrialization, but they lacked some quotidian technologies of my world, and there was a lot of magic mixed in as well. The different systems of technology and power were apparently enabled through the use of something called "frames," such as the electromagnetic frame or the aura force frame. 
+I learned about the geography of this world, Kosmonymia, which helped me understand I was in a country known as the Principality of Iyiria, located at the eastern end of the continent. I absorbed more about the general common sense of technology and magic in the world; there was electricity and industrialization, but they lacked some quotidian technologies of my world, and there was a lot of magic mixed in as well. The different systems of technology and power were apparently enabled through the use of something called “frames,” such as the electromagnetic frame or the aura force frame. 
 
 I couldn't find a book that dumbed it down enough for me to understand how that worked, though. Maybe that knowledge was considered too basic in this world. 
 
@@ -329,13 +329,13 @@ The Duke pulled the sword out of the young man’s back in a spray of blood, kic
 
 Graves tied his black blindfold on. With a cut of the Duke’s sword, a black rift tore open the air, and Graves stepped through and disappeared. 
 
-Just before the Duke entered the rift, he turned back back and looked me in the eye.
+Just before the Duke entered the rift, he turned back and looked me in the eye.
 
 “Congratulations on completing the ceremony. I’m expecting great things from you.” 
 
 Then he, too, stepped into the void and disappeared. 
 
-I went down the stairs and picked up the young man’s sword, because it seemed like a shame to just leave a perfectly good weapon like that, and I looked at the incision in the marble where Cyprian’s sword had cut through the marble like butter. 
+I went down the stairs and picked up the young man’s sword, because it seemed like a shame to just leave a perfectly good weapon like that, and I looked at the incision in the floor where Cyprian’s sword had cut through the marble like butter. 
 
 Cynara emerged from the upstairs hallways in a white night dress, silent and ethereal as a ghost. “Back to your rotten hobbies, brother?”
 
