--- a/src/collections/proof-of-existence/3.md
+++ b/src/collections/proof-of-existence/3.md
@@ -33,7 +33,7 @@ The guest started to laugh, which quickly devolved into a series of wet coughs.
 
 “I’ve heard that miracles do happen,” I said. He didn’t laugh. Tough crowd. “Unfortunately, even if I called for a doctor now, it seems that they wouldn’t be able to do much for you.” 
 
-He tilted his head, assessing me like a tiger sizing up its prey.
+He tilted his head, assessing me with all the poise of a tiger sizing up its prey.
 
 “What do you want?” 
 
@@ -83,7 +83,7 @@ But he still played along.
 
 “Capturing Dreyminn… drew my attention… to the New Lunar Society. Finding their frame… and infiltrating that realm… led me to your family’s… crimes. But my teacher… didn’t respond to my emergency signal.” 
 
-Fascinating connections were being made here. At this point, it was safe to say the Duval family was in the wrong, right? I was also surprised to hear him mention frames. From what I’d read in Acacius’ books, frames were something that allowed different, and sometimes contradictory, systems of magic and technology to exist in parallel. This way, different systems could be used in the same place and time. But it was hard to move from dry theoretical passages to a practical example all of a sudden. Weren’t frames something that anyone had access to? Why would the New Lunar Society have their own frame? 
+Fascinating connections were being made here. At this point, it was safe to say the Duval family was in the wrong, right? I was also surprised to hear him mention frames. From what I remembered of Acacius’ books, frames were something that allowed different, and sometimes contradictory, systems to exist in parallel. That was why there was both magic and technology in Kosmonymia. But it was hard to move from dry theoretical passages to a practical example all of a sudden. Weren’t frames something that anyone had access to? Why would the New Lunar Society have their own frame? 
 
 “And you sent the signal from within the realm?” I asked, raising an eyebrow. 
 
