remove desc used in ch6

--- a/src/collections/proof-of-existence/3.md
+++ b/src/collections/proof-of-existence/3.md
@@ -30,7 +30,7 @@ The guest started to laugh, which quickly devolved into a series of wet coughs.
 
 “What… Feeling generous?” 
 
-“I’ve heard that miracles do happen,” I said. He didn’t laugh. Tough crowd. “Unfortunately, even if I called for a doctor now, it seems that they wouldn’t be able to do much for you.” 
+“I’ve heard that miracles do happen,” I said. “Unfortunately, even if I called for a doctor now, it seems that they wouldn’t be able to do much for you.” 
 
 He tilted his head, assessing me with all the poise of a tiger sizing up its prey.
 
