fix reader caught mistakes

--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -225,10 +225,10 @@ At the beginning of one of Acacius’ personal journals was a note, also in that
 He dated the letter, but didn’t sign his name. I checked the calendar in his room. If he’d kept it up-to-date, then we were in August, and it had been three years since the letter was written. 
 
 
-That meant, according to this will and to the title he’d forced on me, I had two years to take care of Cynara, use Acacius’ name, and kill this Luka guy, or I would die. 
+That meant, according to this will and to the title he’d forced on me, I had two years to kill Luka, use Acacius’ name, and take care of Cynara, or I would die. 
 
 
-The first two were simple enough, but I was stuck on the last condition.
+The last two matters were simple enough, but I was stuck on the first condition.
 
 
 To be honest, aside from the lifespan issue, there was no good reason to kill someone I didn't know. Why should I accept Acacius’ claims at face value? Despite his calculations, he hadn’t been able to predict his own death. If I killed Luka, it would have to be because I felt the reasoning was sufficient, and right now, I knew nothing. 
