--- a/src/collections/proof-of-existence/1.md
+++ b/src/collections/proof-of-existence/1.md
@@ -200,7 +200,7 @@ Fine then. I flipped the Record to the next page.
 > - To take the target’s appearance, the user must know their name, and to imitate their World Proof, the user must know its name.
 > - The skill will be forcefully dispersed when the user lies. 
 
-I felt rather helpless. Was this “World Proof” truly a representation of how Kosmonymia thought of me? Sure, the skill seemed useful, but this description really made me seem like some kind of shady liar, or at least someone who was kind of off in the head. 
+I felt rather helpless. Was this “World Proof” truly a representation of how Kosmonymia thought of me? Sure, the skill seemed useful, but this description really made me seem like some kind of shady liar, or at least someone who was a bit off in the head. 
 
 Still, at least the usage requirements weren’t too difficult. 
 
