--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -52,9 +52,9 @@ Given that the “Devouring Exchange” had the power to let me completely take 
 
 Uh-whew. If I had any other World Proof, I would have been caught right away. 
 
-I held out my hand and muttered, “`[Caller of What Must Be True.]`” 
+I held out my hand and muttered, “`[Caller of What Must Be True]`.” 
 
-`[Honest Man’s Deception.]` 
+`[Honest Man’s Deception]`. 
 
 A sharp black knife appeared in my grasp. When I angled it for Graves’ inspection, a hidden pattern surfaced in the light, like a many-eyed demon grinning wickedly out from the blade. Shit. This Acacius guy was pretty cool, huh? 
 
@@ -224,12 +224,9 @@ At the beginning of one of Acacius’ personal journals was a note, also in that
 
 He dated the letter, but didn’t sign his name. I checked the calendar in his room. If he’d kept it up-to-date, then we were in August, and it had been three years since the letter was written. 
 
-
 That meant, according to this will and to the title he’d forced on me, I had two years to kill Luka, use Acacius’ name, and take care of Cynara, or I would die. 
 
-
 The last two matters were simple enough, but I was stuck on the first condition.
-
 
 To be honest, aside from the lifespan issue, there was no good reason to kill someone I didn't know. Why should I accept Acacius’ claims at face value? Despite his calculations, he hadn’t been able to predict his own death. If I killed Luka, it would have to be because I felt the reasoning was sufficient, and right now, I knew nothing. 
 
@@ -267,7 +264,7 @@ I also spent some time exploring the manor to keep an eye on the people’s move
 
 During this period, a tiny paper crocodile sailed through the window of my room to land on the desk before turning into a card. When I flipped it over, there was a message. 
 
-> *Congratulations on your successful coming-of-age ritual! Why didn’t you tell me the news? - Z* 
+> *Congratulations on your successful coming-of-age ritual! Why didn’t you tell me the news? –Z* 
 >
 > *P.S. I’m progressing with the plan, but no concrete results yet. When are you going to tell me what you want with Luka?* 
 
