--- a/src/collections/proof-of-existence/3.md
+++ b/src/collections/proof-of-existence/3.md
@@ -278,7 +278,7 @@ But Cynara didn’t leave. The previous hostility and ridicule had faded from he
 
 Huh? “Just, it feels as though some disaster is approaching… You have your sword, right?” 
 
-I could use my World Proof to manifest [Caller], but maybe I should find a more sturdy weapon, too. 
+I could use my World Proof to manifest `[Caller]`, but maybe I should find a more sturdy weapon, too. 
 
 Cynara tensed, but eventually unveiled the rapier she’d had hidden behind her back. 
 
