--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -2,8 +2,7 @@
 title: "Unexpected Guest (2)"
 arc: 1
 chapter: 2
-characters: ["cynara", "graves", "zaire", "cyprian", "luka"]
-warnings: []
+tags: ["cynara", "graves", "zaire", "cyprian", "luka"]
 lastEdit: 2025-03-28
 ---
 After reading through the entire Record of Existence, I took a moment to gather my thoughts. 
