--- a/src/collections/proof-of-existence/3.md
+++ b/src/collections/proof-of-existence/3.md
@@ -2,8 +2,7 @@
 title: "Unexpected Guest (3)"
 arc: 1
 chapter: 3
-characters: ["cynara", "luka"]
-warnings: []
+tags: ["cynara", "luka"]
 lastEdit: 2025-03-27
 ---
 It took less than ten minutes for the servants to bring the guest to my room. He’d been tightly bound with sturdy ropes and roughly wiped clean, revealing a face that I could only describe as “stupidly handsome.” They’d left on his long golden earrings, forming a striking contrast with his sharp eyes and soft jaw. A blue dragon pendant had been hung around his neck for reasons I could only begin to guess.  
