--- a/src/collections/proof-of-existence/1.md
+++ b/src/collections/proof-of-existence/1.md
@@ -2,8 +2,7 @@
 title: "Unexpected Guest (1)"
 arc: 1
 chapter: 1
-characters: ["acacius"]
-warnings: []
+tags: ["acacius"]
 lastEdit: 2025-03-27
 ---
 In my dreams, everything was burning. 
