--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -4,6 +4,7 @@ arc: 1
 chapter: 2
 tags: ["cynara", "graves", "zaire", "cyprian", "luka"]
 lastEdit: 2025-03-28
+pubDate: 2025-03-29
 ---
 After reading through the entire Record of Existence, I took a moment to gather my thoughts. 
 
